Fix spacing conflict between 2 PRs

--- a/packages/scss/src/components/fieldset/mods.scss
+++ b/packages/scss/src/components/fieldset/mods.scss
@@ -20,10 +20,6 @@
 		&:focus-visible {
 			@include a11y.focusVisible;
 		}
-
-		.lucca-icon {
-			margin-block-start: var(--pr-t-spacings-50);
-		}
 	}
 }
 
